docs: remove repo structure listing and ICFG/Spoon/SCIP experiment references from README
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>